--- a/week/myresume.css
+++ b/week/myresume.css
@@ -1,38 +1,47 @@
 
-       
-
+        
+        body {
+           
+            font-family: Arial, Helvetica, sans-serif;
+            font-size: 16px;
+         
+        }
+     
+        .bg-img { 
+            background-image: url("bg.jpg");
+            height: 100%; 
+            background-position: center;
+            background-repeat: no-repeat;
+            background-size: cover;
+        }
+        
         h2 {
-            border-top: 2px solid blue;
+            border-top: 2px solid rgb(131, 33, 33);
             padding-top: 5px;
             margin-top: 20px;
             font-family: cursive
         }
-        
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 16px;
-            border: 2px solid red;
-        }
-        
         #profile_pic {
         
-            width:40px;
-            height: 180px;
+            width:20px;
+            height: 150px;
             margin: 10px;
             margin-left: 20px;
             float: right;
             width: 25%;
             border: 3px solid red;
-            border-radius: 50%;
+            border-radius: 35%;
         }
         
         #profile {
             clear: both;
+            margin-bottom: 10px;
             padding: 10px;
             background-color: rgb(43, 43, 71);
             color: white;
             text-align: justify;
             font-family: Verdana, Geneva, Tahoma, sans-serif;
+            border:3px solid rgb(131, 33, 33);
         }
         
         .first-column {
@@ -52,21 +61,36 @@
             font-size: 30px;
         }
         
-        #personal-info {
-            background-color: black;
+        #Menu{
+            display: inline;
             list-style-type: none;
-            margin: 0px;
+            margin: 25px;
+            margin-right: 50px;
+            padding: 10px;
+            background-color: grey;
+        }
+        #personal-info{
+            list-style-type:none;
+            margin: 10px;
             padding: 0px;
-            background: grey;
-            text-align: center;
+            text-align: justify;
+
         }
         
+       a{
+            text-decoration: none;
+            font-family: cursive;
+            color:rgb(131, 33, 33);
+        }
         .li1 {
             display: inline;
-            color: aliceblue;
             font-family: cursive;
-            font-size: 1.3em;
-            margin: 30px;
+            font-size: 1.2em;
+            margin: 10px;
+            padding:5px;
+        }
+        .li2 {
+            margin: 5px;
             padding:5px;
         }
         
@@ -75,77 +99,14 @@
             grid-template-columns: 1fr 1fr;
             grid-template-rows: 30px;
             grid-gap: 20px;
-            color: blue;
+            color:blue;
            
         }
-      
-       
-
-        h2 {
-            border-top: 2px solid blue;
-            padding-top: 5px;
-            margin-top: 20px;
-            font-family: cursive
-        }
-        
-        body {
-            font-family: Arial, Helvetica, sans-serif;
-            font-size: 16px;
-            border: 2px solid red;
-        }
-        
-        #profile_pic {
-        
-            width:30px;
-            height: 180px;
-            margin: 10px;
-            margin-left: 20px;
-            float: right;
-            width: 25%;
-            border: 3px solid red;
-            border-radius: 50%;
-        }
-        
-        #profile {
+        #footer{
             clear: both;
-            padding: 10px;
-            background-color: rgb(43, 43, 71);
-            color: white;
-            text-align: justify;
-            font-family: Verdana, Geneva, Tahoma, sans-serif;
-        }
-        
-        .first-column {
-            float: left;
-            width: 65%
-        }
-        
-        
-        .second-column {
-            float: right;
-            width: 30%
-        }
-        
-        #name {
-            color: aliceblue;
-            font-family: cursive;
-            font-size: 30px;
-        }
-        
-        #personal-info {
-            background-color: black;
-            list-style-type: none;
-            margin: 0px;
-            padding: 0px;
-            background: grey;
-            text-align: center;
-        }
-        
-        .time-place {
-            display: grid;
-            grid-template-columns: 1fr 1fr;
-            grid-template-rows: 30px;
-            grid-gap: 20px;
-            color: blue;
+            margin-bottom: 20px;
+            font-size :1.1em;
+            color:blue;
+            text-align:end;
         }
         
